# error-parity

./: .buildinfo  .flake8  .gitignore  LICENSE  README.md  concepts.html  constraints.html  error_parity.html  faq.html  genindex.html  glossary.html  index.html  installation.html  metrics_reference.html  modules.html  notebooks.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  quickstart.html  readme.html  search.html  searchindex.js  setup.py  usage_evaluation.html  usage_pareto_curve.html  usage_plotting.html  usage_threshold_optimizer.html
.doctrees/: concepts.doctree  constraints.doctree  environment.pickle  error_parity.doctree  faq.doctree  glossary.doctree  index.doctree  installation.doctree  metrics_reference.doctree  modules.doctree  notebooks.doctree  overview.doctree  quickstart.doctree  readme.doctree  usage_evaluation.doctree  usage_pareto_curve.doctree  usage_plotting.doctree  usage_threshold_optimizer.doctree
_modules/: index.html
_sources/: error_parity.rst.txt  faq.rst.txt  modules.rst.txt  notebooks.rst.txt  readme.rst.txt  usage_pareto_curve.rst.txt  usage_threshold_optimizer.rst.txt
_static/: custom.js  documentation_options.js
api/: error_parity.binarize.html  error_parity.classifiers.html  error_parity.cvxpy_utils.html  error_parity.evaluation.html  error_parity.pareto_curve.html  error_parity.plotting.html  error_parity.roc_utils.html  error_parity.threshold_optimizer.html
docs/: concepts.rst  conf.py  constraints.rst  glossary.rst  index.rst  installation.rst  metrics_reference.rst  notebooks.rst  overview.rst  quickstart.rst  usage_evaluation.rst  usage_plotting.rst
error_parity/: __init__.py  _commons.py  _version.py  binarize.py  classifiers.py  cvxpy_utils.py  equal_odds.py  evaluation.py  pareto_curve.py  plotting.py  roc_utils.py  threshold_optimizer.py
examples/: README.html  README.md  brute-force-example_equalized-odds-thresholding.html  brute-force-example_equalized-odds-thresholding.ipynb  example-with-postprocessing-and-inprocessing.html  example-with-postprocessing-and-inprocessing.ipynb  parse-folktables-datasets.html  parse-folktables-datasets.ipynb  relaxed-equal-odds.usage-example-folktables.ipynb  relaxed-equal-odds.usage-example-synthetic-data.ipynb  relaxed-equal-opportunity.usage-example-synthetic-data.ipynb  relaxed-equalized-odds.usage-example-folktables.html  relaxed-equalized-odds.usage-example-folktables.ipynb  relaxed-equalized-odds.usage-example-synthetic-data.html  relaxed-equalized-odds.usage-example-synthetic-data.ipynb  usage-example-for-other-constraints.synthetic-data.html  usage-example-for-other-constraints.synthetic-data.ipynb
notebooks/: ILLUSTRATIVE-PLOT.real-data-version.ipynb  MAIN-results-analysis.supp-materials.ipynb  RESULTS.time-to-fit-algorithms.ipynb  data.MEPS-datasets-preprocessing-1hot.ipynb  data.folktables-datasets-preprocessing-1hot.ipynb
requirements/: README.md  dev.txt  docs.txt  main.txt  requirements-algorithms.txt  requirements-notebooks.txt  requirements.txt  test.txt
scripts/: collect_and_aggregate_results.py  launch_experiments_ACS.py  run_main_experiment.py  (+4 more)
(+93 files in other folders)
